Flash sale alignment fix

--- a/app/assets/stylesheets/soldstyles/_default_themes.scss
+++ b/app/assets/stylesheets/soldstyles/_default_themes.scss
@@ -384,6 +384,8 @@ div.flashmain {
   width: 950px;
   margin-bottom:20px;
   //margin-left: 25px;
+    .flashmain-left {float: left; padding: 0; width: 445px;}
+    .flashmain-right {float: left; padding: 0;  width: 445px;}
     .flash-img {float:left; margin:0 0px 20px 0;}
     span.strikethrough {text-decoration:line-through;}
 
